# Secret-Complain

./: README.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.js
frontend/src/components/: createProposal.js  proposalResults.js  proposalsList.js
frontend/src/functions/: decrypt.js  encrypt.js  query_decrypted_votes.js  query_proposal_votes.js
polygon/: .gitignore  hardhat.config.js
polygon-smart-contract/: .env  package-lock.json  package.json
polygon-smart-contract/contracts/: PrivateVoting.sol
polygon-smart-contract/scripts/: create_proposal.js  query_by_proposal_id.js
polygon/scripts/: create_keys.js  decrypt.js  deploy.js  encrypt.js  query_all_votes.js  query_proposal_votes.js  query_proposals.js  vote.js
secret-network/node/: create_keys.js  decrypt.js  index.js  package-lock.json
secret-network/src/: error.rs  lib.rs  traits.rs
secret-smart-contract/: .gitignore  Cargo.toml
secret-smart-contract/node/: get_keys.js  package.json  query_decrypted_votes.js
secret-smart-contract/src/: contract.rs  msg.rs  state.rs
voting-frontend/: package.json
voting-frontend/src/: App.js  index.css
voting-frontend/src/ABI/: PrivateVoting.json
voting-frontend/src/components/: connectWallet.js  proposalResults.js
voting-frontend/src/functions/: query_all_proposals.js
