[package]
name = "secret_encryption"
version = "0.1.0"
authors = [""]
edition = "2021"
description = ""
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
[dependencies]
cosmwasm-std = { package = "secret-cosmwasm-std", version = "1.1.11", features = [
    "stargate",
    "ibc3",
] }
cosmwasm-storage = { package = "secret-cosmwasm-storage", version = "1.1.11" }
secret-toolkit-storage = "0.10.0"
cosmwasm-schema = "1.0.0"
schemars = { version = "0.8.11" }
serde = { version = "1.0" }
thiserror = { version = "1.0" }


# crypto 
# aes-siv = { version = "0.7.0", default-features = false }
aes-siv = "0.6.2"
derive_more = "0.99"
log = "0.4.8"
hex = "0.4"
# secp256k1 = { version = "0.26.0" }
secp256k1 = { git = "https://github.com/scrtlabs/rust-secp256k1" }
